# DigitalFTE

./: .env.example  .gitignore  AGENTS.md  README.md  ecosystem.config.js  pyproject.toml
.claude/skills/create-plan/: SKILL.md
.claude/skills/process-inbox/: SKILL.md
.claude/skills/update-dashboard/: SKILL.md
AI_Employee_Vault/: Company_Handbook.md  Dashboard.md  Home.md
AI_Employee_Vault/.obsidian/: app.json  appearance.json  community-plugins.json  hotkeys.json  workspace.json
AI_Employee_Vault/.obsidian/snippets/: fte-status-colors.css
AI_Employee_Vault/Done/: ACTION_FastAPI_A_Visual_Guide_20260208_121029.pdf.md  ACTION_test_task_20260208_113201.txt.md  Done.md
AI_Employee_Vault/Inbox/: Inbox.md  automated_test.txt
AI_Employee_Vault/Needs_Action/: ACTION_Inbox_20260208_142040.md.md  ACTION_automated_test_20260208_142920.txt.md  ACTION_automated_test_20260208_142920_1.txt.md  Needs_Action.md
AI_Employee_Vault/Plans/: Plans.md
AI_Employee_Vault/Templates/: Action File.md  Plan.md
scripts/: process_inbox.sh
watchers/: filesystem_watcher.py
