[project]
name = "digital-fte"
version = "0.1.0"
description = "Personal AI Employee - Bronze Tier Implementation"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["ai", "automation", "claude", "obsidian", "agent"]

dependencies = [
    "watchdog>=4.0.0",      # File system monitoring
]

[project.optional-dependencies]
# Silver tier dependencies
silver = [
    "google-api-python-client>=2.100.0",  # Gmail API
    "google-auth-oauthlib>=1.2.0",         # Gmail OAuth
    "playwright>=1.40.0",                   # Browser automation (WhatsApp)
]

# Gold tier dependencies
gold = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "playwright>=1.40.0",
    "schedule>=1.2.0",      # Task scheduling
    "python-dotenv>=1.0.0", # Environment management
    "httpx>=0.25.0",        # HTTP client for APIs
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
# CLI entry points
fte-watcher = "watchers.filesystem_watcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["watchers"]

[tool.ruff]
target-version = "py313"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["watchers"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
